--- a/App/FEKC/app/src/main/res/layout/activity_activity_based_task.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_activity_based_task.xml
@@ -1,4 +1,238 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
+    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+    <!--tools:context="com.example.shiv.fekc.activity.TimeBasedTaskActivity">-->
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/task_descr_duration">-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+            <!--android:text="Activity Based Task"-->
+            <!--android:id="@+id/activity_type_description" />-->
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/activity_type_description"-->
+            <!--android:paddingTop="5dp">-->
+            <!--<ImageView-->
+                <!--android:layout_width="60dp"-->
+                <!--android:layout_height="60dp"-->
+                <!--android:id="@+id/activity_type_logo"-->
+                <!--android:src="@drawable/ic_hourglass_empty"-->
+                <!--android:tint="#222"-->
+                <!--android:layout_alignParentLeft="true" />-->
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_toRightOf="@id/activity_type_logo"-->
+                <!--android:paddingTop="5dp">-->
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textSize="15dp"-->
+                    <!--android:id="@+id/activity_descr_title"-->
+                    <!--android:text="Prevent app usage during a\n predefined activity" />-->
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textSize="11dp"-->
+                    <!--android:text="eg. Prevent messaging while driving everyday"-->
+                    <!--android:id="@+id/activity_descr_example"-->
+                    <!--android:layout_below="@id/activity_descr_title"-->
+                    <!--android:paddingTop="5dp"/>-->
+            <!--</RelativeLayout>-->
+        <!--</RelativeLayout>-->
+    <!--</RelativeLayout>-->
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:paddingLeft="25dp"-->
+        <!--android:paddingRight="25dp"-->
+        <!--android:layout_below="@id/task_descr_duration"-->
+        <!--android:id="@+id/TaskName_TimeBased">-->
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Task Name"-->
+            <!--android:id="@+id/tasknameview"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:textSize="16dp"-->
+            <!--android:textColor="#222"/>-->
+        <!--<EditText-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/taskname"-->
+            <!--android:hint="Task Name"-->
+            <!--android:textSize="13dp"-->
+            <!--android:layout_below="@+id/tasknameview" />-->
+
+    <!--</RelativeLayout>-->
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:paddingLeft="25dp"-->
+        <!--android:paddingRight="25dp"-->
+        <!--android:layout_below="@id/TaskName_TimeBased"-->
+        <!--android:id="@+id/EndDate_TimeBased">-->
+        <!--<TextView-->
+            <!--android:layout_width="120dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="End Date"-->
+            <!--android:id="@+id/endDateView"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:textSize="16dp"-->
+            <!--android:textColor="#222"-->
+            <!--android:paddingBottom="4dp"/>-->
+        <!--<ImageView-->
+            <!--android:layout_width="30dp"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:id="@+id/changeDate"-->
+            <!--android:src="@drawable/ic_date_range"-->
+            <!--android:onClick="setDate"-->
+            <!--android:layout_toEndOf="@id/endDateView"-->
+            <!--android:layout_alignBottom="@id/endDateView"-->
+            <!--android:layout_marginLeft= "10dp"-->
+            <!--android:paddingBottom="4dp"-->
+            <!--/>-->
+        <!--<EditText-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:inputType="date"-->
+            <!--android:ems="10"-->
+            <!--android:id="@+id/date"-->
+            <!--android:layout_alignBottom="@id/changeDate"-->
+            <!--android:layout_toRightOf="@id/changeDate"-->
+            <!--android:clickable="false"-->
+            <!--android:cursorVisible="false"-->
+            <!--android:focusable="false"-->
+            <!--android:focusableInTouchMode="false"-->
+            <!--android:textSize="13dp"-->
+            <!--android:textAlignment="center"/>-->
+
+    <!--</RelativeLayout>-->
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:paddingLeft="25dp"-->
+        <!--android:paddingRight="25dp"-->
+        <!--android:layout_below="@id/EndDate_TimeBased"-->
+        <!--android:paddingTop="30dp"-->
+        <!--android:paddingBottom="30dp"-->
+        <!--android:id="@+id/apps_and_friends_TimeBased">-->
+
+        <!--<RelativeLayout-->
+            <!--android:layout_width="130dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/appBlock_TimeBased">-->
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Apps"-->
+                <!--android:id="@+id/addApps_TimeBased"-->
+                <!--android:layout_alignParentTop="true"-->
+                <!--android:textSize="16dp"-->
+                <!--android:textColor="#222"-->
+                <!--android:layout_marginTop="15dp"-->
+                <!--android:paddingBottom="4dp"-->
+                <!--android:paddingRight="20dp"/>-->
+            <!--<android.support.design.widget.FloatingActionButton-->
+                <!--android:id="@+id/add_apps_button"-->
+                <!--android:layout_width="40dp"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:tint="@color/colorWhite"-->
+                <!--android:src="@drawable/ic_add_24"-->
+                <!--android:layout_toRightOf="@id/addApps_TimeBased"-->
+                <!--android:onClick="addAppsButton"-->
+                <!--android:scaleType="center"/>-->
+        <!--</RelativeLayout>-->
+        <!--<RelativeLayout-->
+            <!--android:layout_width="130dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_toEndOf="@id/appBlock_TimeBased">-->
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Friends"-->
+                <!--android:id="@+id/addFriends_TimeBased"-->
+                <!--android:layout_alignParentTop="true"-->
+                <!--android:textSize="16dp"-->
+                <!--android:textColor="#222"-->
+                <!--android:layout_marginTop="15dp"-->
+                <!--android:paddingBottom="4dp"-->
+                <!--android:paddingRight="20dp"/>-->
+            <!--<android.support.design.widget.FloatingActionButton-->
+                <!--android:id="@+id/activity_schedule_based_task_add_friends_button"-->
+                <!--android:layout_width="40dp"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:tint="@color/colorWhite"-->
+                <!--android:src="@drawable/ic_add_24"-->
+                <!--android:layout_toRightOf="@id/addFriends_TimeBased"-->
+                <!--android:onClick="addFriendsButton"-->
+                <!--android:scaleType="center"/>-->
+        <!--</RelativeLayout>-->
+
+    <!--</RelativeLayout>-->
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/apps_and_friends_TimeBased">-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Set Duration"-->
+            <!--android:id="@+id/set_duration"-->
+            <!--android:layout_marginTop="43dp"-->
+
+            <!--android:layout_below="@+id/add_apps"-->
+            <!--android:layout_alignParentStart="true" />-->
+        <!--<TimePicker-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/timePicker"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_marginStart="375dp"-->
+            <!--android:layout_marginBottom="77dp" />-->
+
+        <!--<EditText-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:inputType="time"-->
+            <!--android:ems="10"-->
+            <!--android:id="@+id/duration"-->
+            <!--android:layout_alignBottom="@+id/set_duration"-->
+            <!--android:layout_toEndOf="@+id/set_duration_button"-->
+            <!--android:clickable="false"-->
+            <!--android:cursorVisible="false"-->
+            <!--android:focusable="false"-->
+            <!--android:focusableInTouchMode="false" />-->
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/set_duration_button"-->
+            <!--android:onClick="setDuration"-->
+            <!--android:src="@drawable/ic_alarm_add_black_48dp"-->
+            <!--android:layout_alignBottom="@+id/set_duration"-->
+            <!--android:layout_toEndOf="@+id/set_duration"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--/>-->
+    <!--</RelativeLayout>-->
+
+<!--</RelativeLayout>-->
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -88,54 +322,6 @@
         android:layout_marginTop="50dp"
 
         />
-
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/date"
-        android:layout_alignBottom="@+id/changeDate"
-        android:layout_toRightOf="@+id/changeDate" />
-
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/changeDate"
-        android:src="@drawable/ic_date_range_black_48dp"
-        android:onClick="setDate"
-        android:layout_toEndOf="@+id/enddateview"
-        android:layout_alignBottom="@+id/enddateview"
-        android:layout_marginLeft= "10dp"
-        />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/save"
-        android:src="@drawable/ic_check_circle_black_48dp"
-        android:layout_alignParentBottom="true"
-        android:onClick="onSave"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_type_logo"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/ic_hourglass_empty_black_48dp"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Activity Based Tasks"
-        android:id="@+id/activity_type_description"
-        android:layout_alignBottom="@+id/activity_type_logo"
-        android:layout_toEndOf="@+id/activity_type_logo" />
 
     <TimePicker
         android:layout_width="wrap_content"
