--- a/App/FEKC/app/src/main/res/layout/activity_time_based_task.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_time_based_task.xml
@@ -1,4 +1,3 @@
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -55,8 +54,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_below="@id/task_descr_duration"
         android:id="@+id/TaskName_TimeBased">
         <TextView
@@ -71,7 +70,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/taskname"
+            android:id="@+id/duration_taskname"
             android:hint="Task Name"
             android:textSize="13dp"
             android:layout_below="@+id/tasknameview" />
@@ -81,8 +80,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_below="@id/TaskName_TimeBased"
         android:id="@+id/EndDate_TimeBased">
         <TextView
@@ -111,7 +110,7 @@
             android:layout_height="wrap_content"
             android:inputType="date"
             android:ems="10"
-            android:id="@+id/date"
+            android:id="@+id/duration_date"
             android:layout_alignBottom="@id/changeDate"
             android:layout_toRightOf="@id/changeDate"
             android:clickable="false"
@@ -122,20 +121,22 @@
             android:textAlignment="center"/>
 
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_below="@id/EndDate_TimeBased"
         android:paddingTop="30dp"
-        android:paddingBottom="30dp"
+        android:paddingBottom="10dp"
         android:id="@+id/apps_and_friends_TimeBased">
         
         <RelativeLayout
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:id="@+id/appBlock_TimeBased">
+            android:id="@+id/appBlock_TimeBased"
+            android:paddingLeft="20dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -160,7 +161,8 @@
         <RelativeLayout
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/appBlock_TimeBased">
+            android:layout_toEndOf="@id/appBlock_TimeBased"
+            android:paddingLeft="20dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -188,16 +190,44 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/apps_and_friends_TimeBased">
+        android:layout_below="@id/apps_and_friends_TimeBased"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Set Duration"
             android:id="@+id/set_duration"
-            android:layout_marginTop="43dp"
-
-            android:layout_below="@+id/add_apps"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:textSize="16dp"
+            android:textColor="#222"
+            android:paddingBottom="4dp"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/set_duration_button"
+            android:src="@drawable/ic_alarm_add_black_48dp"
+            android:onClick="setDuration"
+            android:layout_toEndOf="@id/set_duration"
+            android:layout_alignBottom="@id/set_duration"
+            android:layout_marginLeft= "10dp"
+            android:paddingBottom="4dp"
+            />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="time"
+            android:ems="10"
+            android:id="@+id/duration_duration"
+            android:layout_alignBottom="@id/set_duration"
+            android:layout_toRightOf="@id/set_duration_button"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:textSize="13dp"
+            android:textAlignment="center"/>
         <TimePicker
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -206,29 +236,6 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="375dp"
             android:layout_marginBottom="77dp" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="time"
-            android:ems="10"
-            android:id="@+id/duration"
-            android:layout_alignBottom="@+id/set_duration"
-            android:layout_toEndOf="@+id/set_duration_button"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/set_duration_button"
-            android:onClick="setDuration"
-            android:src="@drawable/ic_alarm_add_black_48dp"
-            android:layout_alignBottom="@+id/set_duration"
-            android:layout_toEndOf="@+id/set_duration"
-            android:layout_marginLeft="10dp"
-            />
-    </RelativeLayout>
+        </RelativeLayout>
 
 </RelativeLayout>
