--- a/App/FEKC/app/src/main/res/layout/activity_warning.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_warning.xml
@@ -1,31 +1,59 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="com.example.shiv.fekc.activity.WarningActivity">
-
-
-    <Button
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:id="@+id/nav_warn">
+        <include layout="@layout/warning_nav"></include>
+    </RelativeLayout>
+    <view
+        android:id="@+id/warning_recycler_view"
+        class="android.support.v7.widget.RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="410dp"
+        android:layout_below="@id/nav_warn"
+        android:layout_centerInParent="true" />
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Stop App"
-        android:id="@+id/activity_warning_stop_app_button"
-        android:onClick="stopApp"
-        android:layout_marginRight="53dp"
-        android:layout_alignTop="@+id/activity_warning_go_to_app_button"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go To App"
-        android:onClick="goToApp"
-        android:id="@+id/activity_warning_go_to_app_button"
-        android:layout_marginBottom="73dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="51dp" />
+        android:layout_alignParentBottom="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+                <Button
+                    android:onClick="goToApp"
+                    android:id="@+id/activity_warning_go_to_app_button"
+                    android:layout_width="130dp"
+                    android:layout_height="50dp"
+                    android:background="#dd1100"
+                    android:text="Go To App"
+                    android:textColor="#fff"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="25dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+                <Button
+                    android:id="@+id/activity_warning_stop_app_button"
+                    android:onClick="stopApp"
+                    android:layout_width="130dp"
+                    android:layout_height="50dp"
+                    android:background="#11dd11"
+                    android:text="Stop App"
+                    android:textColor="#fff"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="25dp"/>
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
