--- a/App/FEKC/app/src/main/res/layout/activity_warning.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_warning.xml
@@ -1,131 +1,64 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.shiv.fekc.activity.WarningActivity">
+
     <RelativeLayout
+        android:id="@+id/nav_warn"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/nav_warn">
+        android:layout_height="100dp">
         <include layout="@layout/warning_nav"></include>
     </RelativeLayout>
-    <RelativeLayout
+
+
+    <view
+        android:id="@+id/acrivity_warning_recycler_view"
+        class="android.support.v7.widget.RecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nav_warn">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:paddingTop="20dp"
-            android:background="@drawable/layout_border"
-            android:id="@+id/user_shiv">
-            <ImageView
-                android:layout_width="120dp"
-                android:layout_height="90dp"
-                android:src="@drawable/test_user2"
-                android:id="@+id/test_user"
-                android:paddingLeft="20dp"/>
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/test_user"
-                android:layout_alignTop="@id/test_user"
-                android:paddingLeft="10dp">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Shiv Kandikuppa"
-                    android:textSize="20dp"
-                    android:id="@+id/shiv"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:text="Hey! You got to stop using this app!"
-                    android:textSize="15dp"
-                    android:layout_below="@id/shiv"/>
-            </RelativeLayout>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:paddingTop="20dp"
-            android:background="@drawable/layout_border"
-            android:layout_below="@id/user_shiv"
-            android:id="@+id/user_mrinal">
-            <ImageView
-                android:layout_width="120dp"
-                android:layout_height="90dp"
-                android:src="@drawable/test_user4"
-                android:id="@+id/test_user2"
-                android:paddingLeft="20dp"/>
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/test_user2"
-                android:layout_alignTop="@id/test_user2"
-                android:paddingLeft="10dp">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Mrinal Kachhara"
-                    android:textSize="20dp"
-                    android:id="@+id/mrinal"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:text="Come on! You can do this! :D"
-                    android:textSize="15dp"
-                    android:layout_below="@id/mrinal"/>
-            </RelativeLayout>
-        </RelativeLayout>
-    </RelativeLayout>
-    <!--<view-->
-        <!--android:id="@+id/warning_recycler_view"-->
-        <!--class="android.support.v7.widget.RecyclerView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="410dp"-->
-        <!--android:layout_below="@id/nav_warn"-->
-        <!--android:layout_centerInParent="true" />-->
-    <RelativeLayout
+        android:layout_height="410dp"
+        android:layout_below="@id/nav_warn"
+        android:layout_centerInParent="true" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-                <Button
-                    android:onClick="goToApp"
-                    android:id="@+id/activity_warning_go_to_app_button"
-                    android:layout_width="130dp"
-                    android:layout_height="50dp"
-                    android:background="#dd1100"
-                    android:text="Go To App"
-                    android:textColor="#fff"
-                    android:textSize="20dp"
-                    android:layout_marginLeft="25dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-                <Button
-                    android:id="@+id/activity_warning_stop_app_button"
-                    android:onClick="stopApp"
-                    android:layout_width="130dp"
-                    android:layout_height="50dp"
-                    android:background="#11dd11"
-                    android:text="Stop App"
-                    android:textColor="#fff"
-                    android:textSize="20dp"
-                    android:layout_marginLeft="25dp"/>
-            </LinearLayout>
-        </LinearLayout>
-    </RelativeLayout>
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-</RelativeLayout>
+            <Button
+                android:id="@+id/activity_warning_go_to_app_button"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="25dp"
+                android:background="#dd1100"
+                android:onClick="goToApp"
+                android:text="Go To App"
+                android:textColor="#fff"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/activity_warning_stop_app_button"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="25dp"
+                android:background="#11dd11"
+                android:onClick="stopApp"
+                android:text="Stop App"
+                android:textColor="#fff"
+                android:textSize="20dp" />
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
